# ai-customer-ops

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: __init__.py  admin.py  analysis.py  cli.py  config.py  constants.py  dashboard.py  database.py  events.py  hermes_client.py  hermes_sync.py  identity.py  main.py  marketing.py  models.py  routing.py  settings_repo.py  strategy_agent.py  wecom_kf.py
app/static/: style.css
app/templates/admin/: base.html  dashboard.html  knowledge.html  marketing.html  rules.html  user_detail.html  users.html  workbench.html
deploy/nginx/: event-crm.conf
deploy/systemd/: event-crm-analyze.service  event-crm-analyze.timer  event-crm-sync.service  event-crm-sync.timer  event-crm.service  hermes-gateway.service
migrations/: env.py
migrations/versions/: 0001_baseline_current.py  0002_v02_customer_ops.py  0003_marketing_assets.py
outputs/: ai-customer-ops-prd-v0.2.md  server-deployment-guide.md  v02-implementation-plan.md
scripts/: install_ubuntu.sh
tests/: conftest.py  test_admin_routes.py  test_analysis.py  test_dashboard.py  test_hermes_sync.py  test_identity.py  test_marketing.py  test_migrations.py  test_settings_repo.py  test_wecom_kf.py
